@@ -1,16 +1,24 @@
 package com.daesoo.dmotools.raid;
 
+import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.daesoo.dmotools.alarm.AlarmService;
 import com.daesoo.dmotools.common.dto.ErrorMessage;
 import com.daesoo.dmotools.common.dto.ServerType;
+import com.daesoo.dmotools.common.entity.Client;
 import com.daesoo.dmotools.common.entity.Raid;
 import com.daesoo.dmotools.common.entity.Timer;
+import com.daesoo.dmotools.common.entity.TimerVote;
+import com.daesoo.dmotools.common.repository.ClientRepository;
 import com.daesoo.dmotools.common.repository.RaidRepository;
 import com.daesoo.dmotools.common.repository.TimerRepository;
+import com.daesoo.dmotools.common.repository.TimerVoteRepository;
 
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
@@ -21,13 +29,45 @@ public class RaidService {
 
 	private final RaidRepository raidRepository;
 	private final TimerRepository timerRepository;
+	private final ClientRepository clientRepository;
+	private final TimerVoteRepository timerVoteRepository;
 	private final AlarmService alarmService;
+	
+//	@Transactional
+//	public List<TimerResponseDto> getTimers(ServerType server) {
+//		return timerRepository.findAllByServerAndStartAtAfter(server, LocalDateTime.now()).stream().map(TimerResponseDto::of).toList();
+//	}
+	
+	
 
+//	public List<RaidResponseDto> getRaids() {
+//		return raidRepository.findAll().stream().map(RaidResponseDto::of).toList();
+//	}
+	
+	@Transactional
 	public List<RaidResponseDto> getRaids(ServerType server) {
-		// TODO Auto-generated method stub
-		return raidRepository.findByTimerServerTypeOrNoTimers(server).stream().map(RaidResponseDto :: of).toList();
+		
+		List<Raid> raids = raidRepository.findAll();
+		// 타이머 데이터를 미리 가져와서 그룹화
+		Map<Long, List<TimerResponseDto>> timersByRaid = timerRepository.findAllByServerAndStartAtAfter(server, LocalDateTime.now())
+				.stream()
+				.collect(Collectors.groupingBy(timer -> timer.getRaid().getId(),
+						Collectors.mapping(TimerResponseDto::of, Collectors.toList())));
+		
+		// 각 레이드에 타이머를 설정하여 DTO 변환
+		return raids.stream()
+				.map(raid -> {
+					RaidResponseDto dto = RaidResponseDto.of(raid);
+					dto.setTimer(timersByRaid.getOrDefault(raid.getId(), Collections.emptyList()));
+					return dto;
+				})
+				.toList();
 	}
+	
 
+
+	
+	@Transactional
 	public TimerResponseDto createTimer(Long raidId, TimerRequestDto dto) {
 
 		Raid raid = raidRepository.findById(raidId).orElseThrow(
@@ -52,9 +92,19 @@ public class RaidService {
 		Timer timer = timerRepository.findById(timerId).orElseThrow(
 				() ->  new IllegalArgumentException(ErrorMessage.TIMER_NOT_FOUND.getMessage()));
 		
+		Client client = clientRepository.findById(clientId).orElseThrow(
+				() ->  new IllegalArgumentException(ErrorMessage.CLIENT_NOT_FOUND.getMessage()));
+		
+	    if (timerVoteRepository.findByTimerAndClient(timer, client).isPresent()) {
+	        throw new IllegalArgumentException(ErrorMessage.ALREADY_VOTED.getMessage());
+	    }
+		
 		if(timer.getClientId() == clientId) {
 			throw new IllegalArgumentException(ErrorMessage.ACCESS_DENIED.getMessage());
 		}
+		
+		TimerVote timerVote = TimerVote.create(timer, client);
+		timerVoteRepository.save(timerVote);
 		
 		timer.increaseVoteCount();
 		
@@ -64,11 +114,12 @@ public class RaidService {
 		return responseDto;
 	}
 
-	public List<TimerResponseDto> getTimers(ServerType server) {
-		// TODO Auto-generated method stub
-		timerRepository.findAllByServer(server);
-		
-		return timerRepository.findAllByServer(server).stream().map(TimerResponseDto::of).toList();
-	}
+//	@Transactional
+//	public List<TimerResponseDto> getTimers(ServerType server) {
+//		// TODO Auto-generated method stub
+//		timerRepository.findAllByServer(server);
+//		
+//		return timerRepository.findAllByServer(server).stream().map(TimerResponseDto::of).toList();
+//	}
 	
 }
